--- a/p.html
+++ b/p.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-
+<script data-ad-client="ca-pub-4996801812800433" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <meta charset="utf-8">
 	<link rel="stylesheet" href="s.css"  >
 	
